Fixed aboutpage spacing

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -55,7 +55,8 @@
       max-width: 100%;
       display: flex;
       flex: wrap;
-      
+      position: relative;
+      top: 0;
     }
 
     .aboutBottom {
@@ -67,6 +68,8 @@
       max-width: 530px;
       padding: 15px;
       margin: 0;
+      position: relative;
+      bottom: 0;
     }
 
     .aboutBottom p {
@@ -88,8 +91,9 @@
       align-items: center;
       padding: 0;
       margin: 0;
+      position: relative;
+      bottom: 0;
+      top: 35px;
     }
-
-
 
   }
